# ringhopper

./: .gitignore  Cargo.toml  README.md
src/emperor/: TODO
src/invader/: Cargo.toml  build.rs
src/invader/src/: cli.rs  main.rs  threading.rs  util.rs  verb.rs
src/invader/src/cli/: test.rs
src/invader/src/verb/: archive.rs  archive_map.rs  archive_tag.rs  bludgeon.rs  compare.rs  convert.rs  dependencies.rs  dependency_list.rs  dependency_tree.rs  extract.rs  info.rs  list_engines.rs  nudge.rs  plate.rs  recompress_vertices.rs  recover.rs  refactor_groups.rs  refactor_paths.rs  strip.rs  tag_collection.rs  undefault.rs  unicode_strings.rs  verify.rs  verify_scenario.rs  version.rs
src/ringhopper/: Cargo.toml
src/ringhopper-definitions/: Cargo.toml
src/ringhopper-definitions/json/: actor.json  actor_variant.json  antenna.json  biped.json  bitmap.json  camera_track.json  color_table.json  continuous_damage_effect.json  contrail.json  damage_effect.json  decal.json  detail_object_collection.json  device.json  device_control.json  device_light_fixture.json  device_machine.json  dialogue.json  effect.json  enum.json  equipment.json  flag.json  fog.json  font.json  garbage.json  gbxmodel.json  globals.json  glow.json  grenade_hud_interface.json  hud_globals.json  hud_interface_types.json  hud_message_text.json  hud_number.json  input_device_defaults.json  item_collection.json  lens_flare.json  light.json  light_volume.json  lightning.json  material_effects.json  meter.json  (+42 more)
src/ringhopper-definitions/json/engine/: halo macintosh demo.json  halo macintosh retail.json  halo mcc cea.json  halo pc beta.json  halo pc betas.json  halo pc custom edition.json  halo pc demo.json  halo pc retail.json  halo pc.json  halo xbox beta.json  halo xbox ntsc demo.json  halo xbox ntsc jp.json  halo xbox ntsc tw.json  halo xbox ntsc us.json  halo xbox pal.json  halo xbox.json
src/ringhopper-definitions/json/engine/custom/: halo pc custom edition extended.json  halo xbox nhe.json  halo xbox pro.json
src/ringhopper-definitions/json/map/: cache.json  resource.json
src/ringhopper-definitions/json/tag/: actor.json  actor_variant.json  antenna.json  biped.json  bitmap.json  camera_track.json  color_table.json  continuous_damage_effect.json  contrail.json  damage_effect.json  decal.json  detail_object_collection.json  device.json  device_control.json  device_light_fixture.json  device_machine.json  dialogue.json  effect.json  enum.json  equipment.json  flag.json  fog.json  font.json  garbage.json  gbxmodel.json  globals.json  glow.json  grenade_hud_interface.json  hud_globals.json  hud_interface_types.json  hud_message_text.json  hud_number.json  input_device_defaults.json  item.json  item_collection.json  lens_flare.json  light.json  light_volume.json  lightning.json  material_effects.json  (+47 more)
src/ringhopper-definitions/src/: accessor.rs  error.rs  lib.rs  parse.rs  primitive.rs  types.rs
src/ringhopper-definitions/src/primitive/: color.rs  data.rs  group.rs  path.rs  plane.rs  string.rs  test.rs  vector.rs
src/ringhopper-definitions/src/primitive/data/: test.rs
src/ringhopper-definitions/src/primitive/string/: test.rs
src/ringhopper-definitions/src/types/: parse.rs
src/ringhopper-engines/: Cargo.toml
src/ringhopper-engines-codegen/: Cargo.toml
src/ringhopper-engines-codegen/src/: lib.rs
src/ringhopper-engines/src/: lib.rs
src/ringhopper-primitives/: Cargo.toml
src/ringhopper-primitives/src/: accessor.rs  crc32.rs  dynamic.rs  engine.rs  error.rs  lib.rs  map.rs  parse.rs  primitive.rs  tag.rs
src/ringhopper-primitives/src/crc32/: test.rs
src/ringhopper-primitives/src/parse/: test.rs
src/ringhopper-primitives/src/primitive/: array.rs  color.rs  data.rs  group.rs  path.rs  plane.rs  string.rs  test.rs  vector.rs
src/ringhopper-primitives/src/primitive/array/: test.rs
src/ringhopper-primitives/src/primitive/data/: test.rs
src/ringhopper-primitives/src/primitive/path/: test.rs
src/ringhopper-primitives/src/primitive/string/: test.rs
src/ringhopper-primitives/src/primitive/vector/: test.rs
src/ringhopper-primitives/src/tag/: test.rs  test.unicode_string_list
src/ringhopper-structs/: Cargo.toml
src/ringhopper-structs-codegen/: Cargo.toml
src/ringhopper-structs-codegen/src/: lib.rs
src/ringhopper-structs/src/: lib.rs
src/ringhopper/src/: constants.rs  lib.rs  logger.rs  map.rs  tag.rs
src/ringhopper/src/data/: bitmap.rs
src/ringhopper/src/data/bitmap/: parse.rs  plate.rs
src/ringhopper/src/map/: extract.rs  gearbox.rs  header.rs  resource.rs  util.rs  xbox.rs
src/ringhopper/src/map/extract/: test.rs
src/ringhopper/src/tag/: archive.rs  bitmap.rs  bludgeon.rs  compare.rs  convert.rs  default.rs  dependency.rs  model.rs  model_animations.rs  nudge.rs  object.rs  recover.rs  result.rs  scenario.rs  scenario_structure_bsp.rs  sound.rs  tag_collection.rs  tree.rs  unicode_string_list.rs  verify.rs
src/ringhopper/src/tag/bitmap/: swizzle.rs  test.rs
src/ringhopper/src/tag/bludgeon/: floats.rs  model.rs  scenario.rs  scenario_structure_bsp.rs  sound.rs  unicode_string_list.rs
src/ringhopper/src/tag/default/: lens_flare.rs  light.rs  light_volume.rs  model.rs  object.rs  particle.rs  shader.rs  sound.rs  sound_looping.rs
src/ringhopper/src/tag/default/lens_flare/: test.rs
src/ringhopper/src/tag/dependency/: test.rs
src/ringhopper/src/tag/nudge/: test.rs
src/ringhopper/src/tag/tree/: test.rs
src/ringhopper/src/tag/verify/: bitmap.rs  dependencies.rs  effect.rs  floats.rs  globals.rs  hud_interface.rs  model.rs  object.rs  particle.rs  particle_system.rs  scenario.rs  scenario_structure_bsp.rs  sound.rs  unicode_string_list.rs
