[workspace]
resolver = "2"

members = [
    "src/ringhopper",
    "src/ringhopper-definitions",
    "src/ringhopper-primitives",
    "src/ringhopper-structs-codegen",
    "src/ringhopper-structs",
    "src/ringhopper-engines-codegen",
    "src/ringhopper-engines",

    "src/invader"
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = "debuginfo"
lto = true
