[package]
name = "invader"
authors = ["Snowy Mouse"]
version = "0.2.0"
description = "Tool for creating and manipulating content for Halo: Combat Evolved"
license = "GPL-3.0-only"
build = "build.rs"
edition = "2021"

[dependencies]
ringhopper = { path = "../ringhopper" }
ringhopper-engines = { path = "../ringhopper-engines" }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies.libc]
version = "0.2.153"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_System_Console"
]

[build-dependencies]
winresource = "0.1"

[package.metadata.winresource]
CompanyName = "Fish and Rips"
ProductName = "Invader"
OriginalFilename = "invader.exe"
LegalCopyright = "2024 Snowy Mouse"
