[package]
name = "ringhopper-engines-codegen"
authors = ["Snowy Mouse"]
version = "0.2.0"
description = "Code generator for ringhopper-engines"
license = "GPL-3.0-only"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
ringhopper-definitions = { git = "https://github.com/FishAndRips/ringhopper-definitions", rev = "4f5b183c636f0a26072c2a857689bb394b03d0c7" }
