[package]
name = "ringhopper-engines-codegen"
authors = ["Snowy Mouse"]
version = "0.2.0"
description = "Code generator for ringhopper-engines"
license = "GPL-3.0-only"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
ringhopper-definitions = { git = "https://github.com/FishAndRips/ringhopper-definitions", rev = "03805a6b02a1c7d36d6cac149eacc1043fb75788" }
