[package]
name = "ringhopper-engines"
authors = ["Snowy Mouse"]
version = "0.2.0"
description = "Engine handling for Ringhopper"
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
ringhopper-engines-codegen = { path = "../ringhopper-engines-codegen" }
ringhopper-definitions = { path = "../ringhopper-definitions" }
ringhopper-primitives = { path = "../ringhopper-primitives" }
