[package]
name = "ringhopper-engines"
authors = ["Snowy Mouse"]
version = "0.2.0"
description = "Engine handling for Ringhopper"
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
ringhopper-engines-codegen = { path = "../ringhopper-engines-codegen" }
ringhopper-definitions = { git = "https://github.com/FishAndRips/ringhopper-definitions", rev = "eb2c98d0fd868f040140a3f0d4bf01f70ffd764d" }
ringhopper-primitives = { path = "../ringhopper-primitives" }
