[package]
name = "ringhopper-engines"
authors = ["Snowy Mouse"]
version = "0.2.0"
description = "Engine handling for Ringhopper"
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
ringhopper-engines-codegen = { path = "../ringhopper-engines-codegen" }
ringhopper-definitions = { git = "https://github.com/FishAndRips/ringhopper-definitions", rev = "4f5b183c636f0a26072c2a857689bb394b03d0c7" }
ringhopper-primitives = { path = "../ringhopper-primitives" }
