[package]
name = "ringhopper-structs-codegen"
authors = ["Snowy Mouse"]
version = "0.2.0"
description = "Tag structures for modding Halo: Combat Evolved"
license = "GPL-3.0-only"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
ringhopper-definitions = { git = "https://github.com/FishAndRips/ringhopper-definitions", rev = "eb2c98d0fd868f040140a3f0d4bf01f70ffd764d" }
