[package]
name = "ringhopper-structs-codegen"
authors = ["Snowy Mouse"]
version = "0.2.0"
description = "Tag structures for modding Halo: Combat Evolved"
license = "GPL-3.0-only"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
ringhopper-definitions = { git = "https://github.com/FishAndRips/ringhopper-definitions", rev = "a6697dc361b4840e9efa23b93dc8b9255f3b3686" }
