[package]
name = "ringhopper-structs-codegen"
authors = ["Snowy Mouse"]
version = "0.2.0"
description = "Tag structures for modding Halo: Combat Evolved"
license = "GPL-3.0-only"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
ringhopper-definitions = { git = "https://github.com/FishAndRips/ringhopper-definitions", rev = "92c7d2c538d7b3b300ae824213c4d0e389d33e86" }
