[package]
name = "ringhopper-structs"
authors = ["Snowy Mouse"]
version = "0.2.0"
description = "Tag structures for Ringhopper"
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
ringhopper-primitives = { path = "../ringhopper-primitives" }
ringhopper-structs-codegen = { path = "../ringhopper-structs-codegen" }
