[package]
name = "ringhopper"
authors = ["Snowy Mouse"]
version = "0.2.0"
description = "Library for modding Halo: Combat Evolved"
license = "GPL-3.0-only"

[dependencies]
ringhopper-primitives = { path = "../ringhopper-primitives" }
ringhopper-structs = { path = "../ringhopper-structs" }
crc64 = "2.0.0"
