[package]
name = "ringhopper"
authors = ["Snowy Mouse"]
version = "0.2.0"
description = "Library for creating and manipulating content for Halo: Combat Evolved"
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
ringhopper-primitives = { path = "../ringhopper-primitives" }
ringhopper-structs = { path = "../ringhopper-structs" }
ringhopper-engines = { path = "../ringhopper-engines" }
crc64 = "2.0.0"
flate2 = { version = "1.0.28", features = ["zlib"], default-features = false }
tiff = "0.9.1"
jxl-oxide = "0.8.0"
png = "0.17.13"
zip = { version = "0.6.6", default-features = false, features = ["zstd", "time"] }
aotuv_lancer_vorbis_sys = "0.1.4"
libc = "0.2.153"
